--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router": "^7.0.2",
+    "react-toastify": "^10.0.6",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
